--- a/spe_blog/templates/spe_blog/plugins/overlay.html
+++ b/spe_blog/templates/spe_blog/plugins/overlay.html
@@ -1,13 +1,16 @@
-
-    <article class="tile white featured-story">
-        {% if article.picture.url %}
+{% for article in articles %}
+    {% if article.picture and article.picture.url %}
+        <article class="tile white featured-story">
             <a href="{{ article.get_absolute_url }}" target="_blank">
             <div class="story-wrap" style="background-image:url({{ article.picture.url }});">
-            <div class="story-text">
-                <h2>{{ article.title }}</h2>
-                <p>{{ article.subheading }}</p>
-            </div>
+                <div class="story-text">
+                    <h2>{{ article.title }}</h2>
+                    <p>{{ article.teaser }}</p>
+                </div>
             </div>
             </a>
-        {% endif %}
-    </article>
+        </article>
+    {% endif %}
+{% empty %}
+    No Articles Found
+{% endfor %}
