--- a/mainsite/static/css/spe/spe-default.scss
+++ b/mainsite/static/css/spe/spe-default.scss
@@ -33,3 +33,11 @@ body {
 .navbar-collapse {
     padding-left:0;
 }
+.sizeIndicator {
+    position: fixed;
+    bottom:20px;
+    right:20px;
+    font-size:30px;
+    font-weight:700;
+    color:hotpink;
+}
