JD's homepage templating + bootstrap size indicator

--- a/mainsite/static/css/spe/_vars.scss
+++ b/mainsite/static/css/spe/_vars.scss
@@ -7,8 +7,9 @@ $col-darkgrey:    #37373a;
 $col-sprlghtgry:  #e7e7e7;
 $col-lightgrey:   #e0e4eb;
 $col-pagegrey:    #f1f2f7;
-$col-medgrey:     #868686;
+$col-boxshadow:   #b4b4b9;
 $col-steelgrey:   #9c9fac;
+$col-medgrey:     #868686;
 $col-spegrey:     #57575a;
 $col-copygrey:    #3d4044;
 $col-footgrey:    #25282d;
@@ -21,7 +22,6 @@ $col-bluegrey:    #646e93;
 $col-speblue2:    #365d98;
 $col-suprdrkblue: #1c1d22;
 $col-hoverblue:   #105cd0;
-
 
 /* Images */
 $img-logosprite: '/static/img/spe/header-sprite1.2.png';
