--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -71,7 +71,7 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="/about/">About SPE</a></li>
                     <li><a href="/contact/">Contact Us</a></li>
-                    <li><a href="{{ spe_url }}" id="global_login" class="loginLink"><span></span>{{ spe_label }}</a></li>
+                    <li><a href="{{ login.url }}" id="global_login" class="loginLink"><span></span>{{ login.label }}</a></li>
                     {# NEW REPLACMENT LINE FOR NEW WAY OF DOING LOGIN/LOGOUT: NOTE: change hard coded calendar to this pages url #}
                     {# <li><a id="loginLink" href="/appssecured/login/servlet/LoginServlet?ERIGHTS_TARGET=/events/calendar/" class="loginLink" data-logout-txt="<span></span>Sign out"><span></span>Sign in</a></li>#}
 
