--- a/mainsite/static/css/spe/spe-default.css
+++ b/mainsite/static/css/spe/spe-default.css
@@ -190,8 +190,22 @@ body { font-family: 'Open Sans', sans-serif; background-color: #f1f2f7; }
 
 /* *************************************** */
 /* *************************************** */
+/* =================================================================== */
+/* CONTENT & BOXES
+====================================================================== */
+/* Base colors */
+/* greys */
+/* blues */
+/* Images */
+.content-area { margin-top: 30px; }
+
+.section-heading { display: block; margin: 0 0 30px 0; text-transform: uppercase; color: #365d98; font-size: 24px; font-weight: 400; letter-spacing: -1px; }
+
+.tile { box-shadow: 0 1px 2px #b4b4b9; margin-bottom: 20px; padding: 15px; min-width: 150px; }
+.tile.white { background-color: white; }
+
+.link-box { border-top: 4px solid #365d98; }
+
 /* *************************************** */
 /* *************************************** */
 .navbar-collapse { padding-left: 0; }
-
-.sizeIndicator { position: fixed; bottom: 20px; right: 20px; font-size: 30px; font-weight: 700; color: hotpink; }
