--- a/mainsite/static/css/spe/spe-default.scss
+++ b/mainsite/static/css/spe/spe-default.scss
@@ -26,6 +26,7 @@ body {
 @import 'yamm';
 @import 'speheader';
 @import 'spefooter';
+@import 'specontent';
 
 /* *************************************** */
 /* *************************************** */
@@ -33,11 +34,11 @@ body {
 .navbar-collapse {
     padding-left:0;
 }
-.sizeIndicator {
-    position: fixed;
-    bottom:20px;
-    right:20px;
-    font-size:30px;
-    font-weight:700;
-    color:hotpink;
-}
+//.sizeIndicator {
+//    position: fixed;
+//    bottom:20px;
+//    right:20px;
+//    font-size:30px;
+//    font-weight:700;
+//    color:hotpink;
+//}
