--- a/mainsite/templates/spe_3col.html
+++ b/mainsite/templates/spe_3col.html
@@ -1,18 +1,18 @@
 {% extends "spe_base.html" %}
-{% load cms_tags %}
+{% load cms_tags sekizai_tags %}
 
 {% block title %}{% page_attribute "page_title" %}{% endblock title %}
 
 {% block cms_content %}
-    <div class="row feature-content">
+    <div class="row content-area">
 
-        <div class="col-sm-8 col-sm-push-3 col-md-6 homepage-features">
+        <div class="col-sm-7 col-sm-push-4 col-md-push-3 col-md-6 homepage-features">
 
             {% placeholder "notice" %}
             {% placeholder "content" %}
 
         </div>
-        <div class="col-sm-2 col-sm-offset-1 col-sm-pull-8 col-md-pull-6" id="notices-ads">
+        <div class="col-sm-3 col-sm-offset-1 col-sm-pull-7 col-md-2 col-md-pull-6" id="notices-ads">
 
             {% placeholder "aside" %}
 
@@ -21,15 +21,10 @@
         <div class="col-sm-10 col-sm-offset-1 col-md-2 col-md-offset-0 spe-content">
 
             {% placeholder "additional-content" %}
-{#            <i class="fa fa-meh-o"></i>Wahoo<span class="glyphicon glyphicon-picture" aria-hidden="true"></span>#}
+
         </div>
     </div>
 
-    <div class="visible-xs sizeIndicator">xs</div>
-    <div class="visible-sm sizeIndicator">sm</div>
-    <div class="visible-md sizeIndicator">md</div>
-    <div class="visible-lg sizeIndicator">lg</div>
-
-
+    {% include 'z_boostrap_size_indicator.html' %}
 
 {% endblock cms_content %}
