--- a/mainsite/templates/test.html
+++ b/mainsite/templates/test.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %}
+{% extends "spe_base.html" %}
 {% load cms_tags %}
 
 {% block title %}{% page_attribute "page_title" %}{% endblock title %}
 
-{% block content %}
+{% block cms_content %}
     <h3>Testing the context</h3>
     <hr>
     <h4>variables</h4>
@@ -42,4 +42,4 @@
 
 
     {% placeholder "content" %}
-{% endblock content %}
+{% endblock cms_content %}
