--- a/mainsite/templates/spe_3col.html
+++ b/mainsite/templates/spe_3col.html
@@ -3,7 +3,7 @@
 
 {% block title %}{% page_attribute "page_title" %}{% endblock title %}
 
-{% block cms_content %}
+{% block content %}
     <div class="row content-area">
 
         <div class="col-sm-7 col-sm-push-4 col-md-push-3 col-md-6 homepage-features">
@@ -27,4 +27,4 @@
 
     {% include 'z_boostrap_size_indicator.html' %}
 
-{% endblock cms_content %}
+{% endblock content %}
