--- a/mainsite/static/css/spe/_specontent.scss
+++ b/mainsite/static/css/spe/_specontent.scss
@@ -8,7 +8,7 @@
 }
 .section-heading {
   display: block;
-  margin: 0 0 30px 0;
+  margin: 0 0 10px 0;
   text-transform: uppercase;
   color: $col-speblue2;
   font-size: 24px;
@@ -20,11 +20,42 @@
   margin-bottom: 20px;
   padding: 15px;
   min-width: 150px;
-
-  &.white {
+}
+.whiteback {
     background-color: $col-white;
   }
-}
 .link-box {
-    border-top: 4px solid $col-speblue2;
+  border-top: 4px solid $col-speblue2;
+  background-color: $col-white;
+
+  ul {
+    margin:0;
+    list-style: disc outside;
+    padding: 0;
+
+    & > :first-child {
+      border-top: 1px solid $col-pagegrey;
+      padding-top:10px;
+    }
+
+    li {
+      line-height: 18px;
+      list-style-type: none;
+      padding: 0 0 10px 0;
+      //border-bottom: 1px solid #f1f3f6;
+      border-bottom: 1px solid $col-pagegrey;
+      margin: 0 0 10px 0;
+      letter-spacing: .01rem;
+
+      a {
+        color: $col-spegrey;
+
+        &:visited {
+        //color: #105cd0;
+        outline: 0;
+        text-decoration: none;
+      }
+      }
+    }
+  }
 }
