--- a/mainsite/static/css/spe/spe-default.scss
+++ b/mainsite/static/css/spe/spe-default.scss
@@ -3,7 +3,7 @@
  * Author: JD Toony
  * Date: 2/28/16
  * Time: 12:38 9M
- * Copyright 2016 Society of Petroeum Engineers, all rights reserved
+ * Copyright 2016 Society of Petroleum Engineers, all rights reserved
  * style="display:block;z-index:9950;"
  */
 @import 'vars';
@@ -34,6 +34,10 @@ body {
 .navbar-collapse {
     padding-left:0;
 }
+.pinkBorder {
+    border:1px solid pink;
+}
+
 //.sizeIndicator {
 //    position: fixed;
 //    bottom:20px;
