--- a/spe_blog/templates/spe_blog/plugins/image_left.html
+++ b/spe_blog/templates/spe_blog/plugins/image_left.html
@@ -2,7 +2,7 @@
 
 {% for article in articles %}
 {#    {% if instance.hide_featured and not article.is_featured %}#}
-    <article class="tile white story{% if not article.published %} unpublished{% endif %}{% if article.future %} future{% endif %}"
+    <article class="tile whiteback story{% if not article.published %} unpublished{% endif %}{% if article.future %} future{% endif %}"
                 style="min-height: 150px">
     <a href="{{ article.get_absolute_url }}" target="_blank">
         <div class="story-wrap">
