--- a/spe_links/templates/spe_links/plugins/links_plugin.html
+++ b/spe_links/templates/spe_links/plugins/links_plugin.html
@@ -1,5 +1,5 @@
 {% if instance.links %}
-    <div class="tile white {{ instance.category.class_name }}">
+    <div class="tile link-box {{ instance.category.class_name }}">
         <span class="section-heading">{{ instance.category.title }}</span>
 		<ul id="{{ instance.category.class_name }}-list">
         {% for link in instance.links %}
