--- a/mainsite/static/css/spe/_speheader.scss
+++ b/mainsite/static/css/spe/_speheader.scss
@@ -166,7 +166,7 @@
   font-weight: 600;
 }
 /* Search */
-#search { float:right;margin:33px 0 0 0; }
+#search { float:right;margin:33px 0 30px 0; }
 #search select { display:none; } /* Not displaying select box in header search. Is displayed on SRP. */
 #search .searchForm { width:235px;height:32px;margin:0;border-radius:5px;background-color:$col-lightgrey; }
 #search .GoogleSiteSearch #gssTextInput { float:left;font-size:14px;border:none;-webkit-appearance:none;background:none;width:197px;margin:7px 0 0 0;height:20px;outline:none; }
