--- a/mainsite/static/css/spe/spe-default.css
+++ b/mainsite/static/css/spe/spe-default.css
@@ -129,7 +129,7 @@ body { font-family: 'Open Sans', sans-serif; background-color: #f1f2f7; }
 .welcomemsg { margin: 35px 30px 30px 0; font-size: .8em; text-align: right; line-height: 1; font-weight: 600; }
 
 /* Search */
-#search { float: right; margin: 33px 0 0 0; }
+#search { float: right; margin: 33px 0 30px 0; }
 
 #search select { display: none; }
 
