--- a/mainsite/templates/spe_base.html
+++ b/mainsite/templates/spe_base.html
@@ -3,8 +3,8 @@
 {% block css_base %}
     {% load staticfiles %}
     <!-- CSS_BASE -->
-    <link rel="stylesheet" type="text/css" media="all" href="{% static 'css/spe/translateelement.css' %}" /><!-- GOOGLE TRANSLATE WIDGET -->
-    <link rel="stylesheet" type="text/css" media="all" href="{% static 'css/spe/spe-default.css' %}" />
+    <link rel="stylesheet" type="text/css" media="all" href="{% static 'speorg/css/translateelement.css' %}" /><!-- GOOGLE TRANSLATE WIDGET -->
+    <link rel="stylesheet" type="text/css" media="all" href="{% static 'speorg/css/spe-default.css' %}" />
 {% endblock css_base %}
 
 {% block content_header %}
