--- a/mainsite/templates/ogf_base.html
+++ b/mainsite/templates/ogf_base.html
@@ -12,12 +12,136 @@
     <link rel="stylesheet" type="text/css" media="all" href="{% static 'ogf/css/ogf-styles.css' %}" />
 {% endblock css_base %}
 
-{% block content_header %}
+{% block wrap_begin %}<div class="container-fluid">{% endblock wrap_begin %}
 
+{% block content_header %}
+    <!-- HEADER Begin -->
+        <div class="row">
+            <div class="col-md-12" id="adLeaderboard">
+                <img id="adLeaderboardImg" src="http://dummyimage.com/728x90/591c59/703870.png&text=800+x+600+AdZone1" class="img-responsive">
+            </div>
+        </div>
+
+        <div class="row" id="topbar">
+            <div class="col-sm-6 topbarcol">
+                <ul class="topbarmenuleft">
+                    <li><a href="http://www.spe.org/">SPE</a></li>
+                    <li><a href="/">JPT</a></li>
+                    <li><a href="/" class="yellow">OGF</a></li>
+                    <li><a href="/">HSE Now</a></li>
+                    <li><a href="/">The WAY Ahead</a></li>
+                </ul>
+            </div>
+            <div class="col-sm-4 text-right topbarcol">
+                <ul class="topbarmenuright">
+                    <li><a href=""><i class="fa fa-facebook"></i></a></li>
+                    <li><a href=""><i class="fa fa-twitter"></i></a></li>
+                    <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href=""><i class="fa fa-youtube-play"></i></a></li>
+                </ul>
+            </div>
+            <div class="col-sm-2 text-center topbarcol" id="signin">
+                <a href=""><i class="fa fa-user"></i> Sign In</a>
+            </div>
+
+        </div>
+
+        <div class="row" id="menubar">
+            <div class="col-md-3" id="mainLogo">
+                <img src="{% static 'ogf/img/ogf-logo-horizontal.svg' %}"/>
+            </div>
+            <div class="col-md-9 text-right">
+                <ul class="pubMenu">
+                    <li><a href="">TOPICS</a></li>
+                    <li><a href="">TECHNOLOGY</a></li>
+                    <li><a href="">PEOPLE</a></li>
+                    <li><a href="">PEER REVIEWED PAPERS</a></li>
+                    <li><a href="">MAGAZINE</a></li>
+                    <li class="searchIcon"><a role="button" data-toggle="collapse" href="#collapseSearch" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-search"></i></a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row searchbar collapse" id="collapseSearch">
+            <div class="col-sm-12 text-right">
+                <form class="form-inline">
+                    <div class="input-group">
+                        <input type="text" class="form-control">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="button">Go!</button>
+                        </span>
+                    </div>
+                </form>
+            </div>
+        </div>
+    <!-- HEADER END -->
 {% endblock content_header %}
 
-{% block content_footer %}
+{% block wrap_end %}</div><!-- CONTAINER END -->{% endblock wrap_end %}
 
+{% block content_footer %}
+    <!-- FOOTER Begin -->
+    <div class="footerUpper row">
+        <div class="footerULeft col-md-3">
+            <img src="{% static 'ogf/img/ogf-logo-horizontal.svg' %}" class="footerLogo">
+            <ul class="footerSocial">
+                <li><a href=""><i class="fa fa-facebook"></i></a></li>
+                <li><a href=""><i class="fa fa-twitter"></i></a></li>
+                <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+                <li><a href=""><i class="fa fa-youtube-play"></i></a></li>
+            </ul>
+            <p class="copyright">&copy;2003-2016 Society of Petroleum Engineers, All Rights Reserved.</p>
+        </div>
+        <div class="footerURight col-md-9">
+            <div class="col-md-2 col-md-offset-1">
+                <h3>MAIN</h3>
+                <p><a>Topics</a></p>
+                <p><a>Technology</a></p>
+                <p><a>News</a></p>
+                <p><a>People</a></p>
+                <p><a>Papers</a></p>
+                <p><a>Magazine</a></p>
+            </div>
+            <div class="col-md-3">
+                <h3>DEPARTMENTS</h3>
+                <p><a>From the PFC Technical Director</a></p>
+                <p><a>Culture Matters</a></p>
+                <p><a>Global Market Trends</a></p>
+                <p><a>PFC Roundup</a></p>
+                <p><a>Technology Marketplace</a></p>
+                <p><a>Calendar</a></p>
+                <p><a>Peer-Reviewed Papers</a></p>
+            </div>
+            <div class="col-md-3">
+                <h3>UTILITY</h3>
+                <p><a>About</a></p>
+                <p><a>Contact</a></p>
+                <p><a>Subscribe</a></p>
+                <p><a>Advertise</a></p>
+                <p><a>Archive</a></p>
+                <p><a>Submit a Paper<br>for Peer Review</a></p>
+            </div>
+            <div class="col-md-3">
+                <h3>SPE</h3>
+                <p><a>SPE</a></p>
+                <p><a>JPT</a></p>
+                <p><a>OGF</a></p>
+                <p><a>SPE Journals</a></p>
+                <p><a>HSE Now</a></p>
+            </div>
+        </div>
+    </div>
+    <div class="footerLower">
+        <img src="{% static 'ogf/img/spe-logo-icon.svg' %}"/>
+        <ul class="footerSPEMenu">
+            <li><a href="">MEMBERSHIP</a></li>
+            <li><a href="">EVENTS</a></li>
+            <li><a href="">PUBLICATIONS</a></li>
+            <li><a href="">TRAINING</a></li>
+            <li><a href="">RESOURCES</a></li>
+        </ul>
+    </div>
+    <!-- FOOTER END -->
 {% endblock content_footer %}
 
 
