Added Volume and Issue to Issue Plugin

--- a/spe_blog/templates/spe_blog/plugins/issues.html
+++ b/spe_blog/templates/spe_blog/plugins/issues.html
@@ -10,6 +10,8 @@
                 </figure>
             <div class="story-text">
                 <span class="pub-date">{{ issue.date }}</span>
+                <span>Volume: {{ issue.print_volume }}</span>
+                <span>Issue: {{ issue.print_issue }}</span>
             </div>
         </div>
     </a>
