--- a/mainsite/static/speorg/css/_vars.scss
+++ b/mainsite/static/speorg/css/_vars.scss
@@ -17,6 +17,7 @@ $col-speblack:    #0C090A;
 
 /* blues */
 $col-oldspeblue:  #336699;
+$col-textblue:    #a3bce4;
 $col-speblue:     #26416c;
 $col-bluegrey:    #646e93;
 $col-speblue2:    #365d98;
